--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <section id="desinv">
         <h2>Why I Am Taking DESINV 23</h2>
         <p>
-            I am taking DESINV 23 to explore innovation, creative problem solving,
-            and interdisciplinary design thinking. I want to better understand how
-            technical systems integrate with human-centered design.
+            I am taking DESINV 23 to learn more about how technical skills can be used creatively and to get more connected with my artistic side.
+            I believe that for me art has been very useful to question things and to introspective about what I am or others are doing and why, 
+            and I think that my EECS degree is the perfect thing to question and be introspective about. 
         </p>
     </section>
 
